Ajusta excoexecução do build com Maven

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,4 +1,14 @@
 spring:
+  profiles:
+    active: test
+  autoconfigure:
+    exclude: org.keycloak.adapters.springboot.KeycloakAutoConfiguration
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: ''
+          jtw-set-uri: ''
   datasource:
     url: jdbc:h2:mem:testdb
     username: sa
@@ -10,8 +20,6 @@ spring:
     properties:
       hibernate:
         show_sql: false
-  profiles:
-    active: test
 
 cron:
   habilitada: false
