--- a/pom.xml
+++ b/pom.xml
@@ -40,12 +40,12 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-devtools</artifactId>-->
-<!--			<scope>runtime</scope>-->
-<!--			<optional>true</optional>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -92,12 +92,12 @@
 			<artifactId>micrometer-registry-prometheus</artifactId>
 		</dependency>
 
-<!--		&lt;!&ndash; Jaeger &ndash;&gt;-->
-<!--		<dependency>-->
-<!--			<groupId>io.opentracing.contrib</groupId>-->
-<!--			<artifactId>opentracing-spring-jaeger-web-starter</artifactId>-->
-<!--			<version>3.1.2</version>-->
-<!--		</dependency>-->
+		<!-- Jaeger -->
+		<dependency>
+			<groupId>io.opentracing.contrib</groupId>
+			<artifactId>opentracing-spring-jaeger-web-starter</artifactId>
+			<version>3.1.2</version>
+		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>io.opentracing.contrib</groupId>-->
 <!--			<artifactId>opentracing-spring-cloud-starter</artifactId>-->
@@ -126,7 +126,7 @@
 			</plugin>
 		</plugins>
 
-<!--		<finalName>propostas</finalName>-->
+		<finalName>propostas</finalName>
 	</build>
 
 </project>
