--- a/src/main/resources/application-dev-backup.yml
+++ b/src/main/resources/application-dev-backup.yml
@@ -52,10 +52,10 @@ spring:
           jtw-set-uri: ${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/desafio3/protocol/openid-connect/certs}
 
 ## OpenTracing
-#opentracing:
-#  jaeger:
-#    enabled: ${JAEGER_ENABLED:true}
-#    service-name: ${spring.application.name}
-#    http-sender-url: ${JAEGER_ENDPOINT:http://localhost:14628/api/traces}
-#    probabilistic-sampler:
-#      sampling-rate: ${JAEGER_SAMPLER:1}
+opentracing:
+  jaeger:
+    enabled: ${JAEGER_ENABLED:false}
+    service-name: ${spring.application.name:propostas}
+    http-sender-url: ${JAEGER_ENDPOINT:http://localhost:14628/api/traces}
+    probabilistic-sampler:
+      sampling-rate: ${JAEGER_SAMPLER:1}
